touchscreen:ft3418_i2c: Update from sunny/mojito.
* Fixes dt2w breaks on deepsleep.

Change-Id: Id9e16f3c03f84fe66d198fca0982f2073631c195
Signed-off-by: muralivijay <muralidharan9845@gmail.com>
Signed-off-by: Muralidharan Kumaresan <muralidharan9845@gmail.com>
Signed-off-by: fadlyas07 <mhmmdfdlyas@proton.me>

--- a/drivers/input/touchscreen/ft3418_i2c/Makefile
+++ b/drivers/input/touchscreen/ft3418_i2c/Makefile
@@ -10,7 +10,7 @@ obj-$(CONFIG_TOUCHSCREEN_FTS)   +=  focaltech_point_report_check.o
 
 
 obj-$(CONFIG_TOUCHSCREEN_FTS)	+=  focaltech_flash.o
-obj-$(CONFIG_TOUCHSCREEN_FTS)   +=  focaltech_flash/
+obj-$(CONFIG_TOUCHSCREEN_FTS)   +=  focaltech_flash/focaltech_upgrade_ft3418.o
 
 
 
