--- a/techpack/display/config/bengaldisp.conf
+++ b/techpack/display/config/bengaldisp.conf
@@ -11,5 +11,6 @@ export CONFIG_DSI_PARSER=y
 export CONFIG_DRM_SDE_WB=n
 export CONFIG_DRM_MSM_REGISTER_LOGGING=y
 export CONFIG_QCOM_MDSS_PLL=y
+export CONFIG_MSM_SDE_ROTATOR=y
 export CONFIG_MSM_SDE_ROTATOR_EVTLOG_DEBUG=y
 export CONFIG_DRM_SDE_RSC=n
